<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fromnet1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="inducesmile.com.suumme.activity.MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="100sp"
        android:layout_height="137.27sp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="90sp"
        android:background="@drawable/logo"
        tools:ignore="ContentDescription" />


    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="20dp"
        android:background="@drawable/username"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingLeft="45sp"
        android:textColor="@color/colorGreen"
        android:textColorHint="@color/colorGreen"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextUsername"
        android:layout_marginTop="10dp"
        android:background="@drawable/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="45sp"
        android:textColor="@color/colorGreen"
        android:textColorHint="@color/colorGreen"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="#fc5252"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectangle"
        android:text="@string/login"
        android:textColor="@color/colorGreen"
        android:textSize="17sp" />


</RelativeLayout>

