<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="inducesmile.com.suumme.activity.company.OrderFragmentCompany">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.CardView
                    android:id="@+id/second"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">

                        <ImageView
                            android:id="@+id/productPhoto"
                            android:layout_width="72dp"
                            android:layout_height="72dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginRight="16dp" />

                        <TextView
                            android:id="@+id/productName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_toEndOf="@+id/productPhoto"
                            android:layout_toRightOf="@+id/productPhoto"
                            android:textSize="30sp" />

                        <TextView
                            android:id="@+id/productPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/productName"
                            android:layout_toRightOf="@+id/productPhoto" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:id="@+id/third"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_below="@id/second"
                    android:layout_marginTop="0dp"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/group" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ordered_by"
                                android:textSize="20dp" />

                            <TextView
                                android:id="@+id/productShopName"
                                android:layout_marginLeft="10dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="20dp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/quantity"
                                android:textSize="20dp" />

                            <TextView
                                android:id="@+id/productQuantity"
                                android:layout_marginLeft="10dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="20dp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/total_price"
                                android:textSize="20dp" />

                            <TextView
                                android:id="@+id/productTotalPrice"
                                android:layout_marginLeft="10dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="20dp" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/due_date"
                                android:textSize="20dp" />

                            <TextView
                                android:id="@+id/productDate"
                                android:layout_marginLeft="10dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="20dp" />

                        </LinearLayout>

                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/buttonStatus"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/third"
                    android:layout_margin="16dp"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="24dp"
                    android:background="#fc5252"
                    android:padding="12dp"
                    android:textColor="#ffffff" />
            </RelativeLayout>
        </android.support.v4.widget.SwipeRefreshLayout>
    </LinearLayout>

</FrameLayout>
